--- a/index.css
+++ b/index.css
@@ -2,24 +2,15 @@
     border: 10px solid rgb(171, 162, 162);
     font-style: italic;
     margin-left: 10px;
-    z-index: 2;
-}
-
-
-
-.foto {
-    float: right;
-   
+    margin-right: 30px;
 }
 
 .cuadrado {
-    width: 245px; 
-    height: 245px; 
-    background-color: rgb(45, 40, 40);
+    margin-left: 1150px;
+    background: black;
+    height: 235px;
+    width: 235px;
     margin-top: 10px;
-    margin-right: 25px;
-    float: right;
-    z-index: 3;
 }
 
 .cuerpo1 {
@@ -29,33 +20,30 @@
 
 .experiencia {
 
-    margin-bottom: -;
-    margin-right: 222px;
+    margin-top: -700px;
+    margin-left: 900px;
+    margin-right: 60px;
+    float: left;
     
 }
 
 .educacion {
-    width: 250px; 
-    height: 225px; 
+    width: 600px; 
+    height: 700px; 
     background-color: rgb(206, 185, 185);
-    margin-top: 20px;
-    margin-left: 10px;
-    float: left;
-    font-size: 12px;
+   
 }
 
 .puntuacion {
     margin-left: 10px;
-    margin-top: 250px;
+    margin-top: 10px;
+    margin-bottom: 50px;
 }
 
 .cualidad1 {
-    margin-bottom: -125px;
-    margin-left: 25pc;
-    height: 85px;
-    width: 120px; 
-    background-color: gray;
-    font-size: larger;
+    display: flex;
+    flex-wrap: wrap;
+    align-content: space-evenly;
 }
 
 .cualidad2 {
